feat(auth): complete forced passcode change
